[package]
name = "cw-auction"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "2.0.0"
cosmwasm-storage = "1.5.2" 
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw721-base = "0.18.0"
cw721 = "0.18.0"
cw20 = "2.0.0"